# snippets

./: .gitignore  README.md  waterfall-eicweb.sh
Calorimetery/: README.md
Calorimetery/BHCalCalibration/: FillBHCalCalibrationTupleProcessor.cc  FillBHCalCalibrationTupleProcessor.h  README.md
Calorimetery/CaloDebugTools/: README.md
Calorimetery/ClusterVisualizer/: draw_clusters.py  utils.py
Calorimetery/ExtractDetectorTypes/: PlotDetectorTypes.cxx  README.md
Calorimetery/ExtractIndicesFromCellID/: ExtractCellIndices.cxx  README.md
Calorimetery/MatchClustersToTrackProjections/: MatchProjectionsAndClusters.cxx  README.md
Calorimetery/MergeBHCalTiles/: README.md  RunEICReconWithTileMerging.rb
Calorimetery/ReadAssociationsAndContributions/: README.md  ReadInAssociationsAndContributions.cxx
ElectronID/: ElectronID.cc  ElectronID.hh  InclusiveSkim.C  InclusiveSkim.h  README  preLoadLib.hh
ElectronID/Boost/: Beam.h  Boost.h  getBoost.h
Exclusive/: README.md  ePIC_ExcKinUtils.h  tEXBABE.h  teXBABE.h
FarForwardAndBackward/: README.md
FullChainBnlFarmScript/: README.md  example_macro.C  submit.sh
Inclusive/: README.md  ePIC_IncKinUtils.h
Infrastructure/Acts_versions/: plot.py  versions.py  versions.sh  versions_dd4hep.sh
JLab_Farm_Scripts/: Init_Env.sh  JLab_Farming.sh  JLab_Farming_Job.sh  README.md
JetsAndHF/: README.md
JetsAndHF/Job_submission_RCF/: README.md  analysis.C  job_run.sh  submit_jobs.sh  test.list
JetsAndHF/Lcp_Reconstruction/: Check_daughters.C  GNUmakefile  Lcp_Reconstruction.cxx  PhysicalConstants.h  Prepare_file.sh  StHelix.h  StPhysicalHelix.cxx  readme  readme.md  test.list  test_Lc.list
JetsAndHF/ML_HF_Reconstruction/: Readme  Readme.md
JetsAndHF/PythonPodioExample/: CalculateJESRWithPODIO.py  README.md
JetsAndHF/SecondaryVertex_Chi2/: Check_Origin_D0meson.C  Check_decaylength.C  Compare_Svtx.C  D0_Reconstruction  GNUmakefile  Plot_D0.C  Prepare_file_eAu_ES_ReAu.sh  Prepare_file_ep.sh  Prepare_file_ep_ES_ReAu.sh  StHelix.cxx  StPhysicalHelix.h  analysis.cxx  pca_global_impactpoint.C  readme.md  test.list
JetsAndHF/eFinder/: find_ScatElectron.C
JetsAndHF/jetReaderExamples/: README.md  jetReader_TTreeReader.C
PID/: README.md  read_pdg.C  read_pdg.py  read_pid.C  read_pid.py
PID/hpDIRC/: README.md  myvis.mac  phi_code_dirc.C
RootExamples/: README.md
RootExamples/UsingAlgorithmsAndPodioInAnalysis/: README.md  RunAlgorithmsOutsideOfReco.cxx
RootExamples/UsingPodioWithRDataFrames/: RunRDataFramesWithPodio.cxx  RunRDataFramesWithPodio.py  setup.sh
RootExamples/helloroot/: CMakeLists.txt  README.md
RootExamples/helloroot/include/helloroot/: helloroot.hh
RootExamples/helloroot/src/: helloexec.cxx  helloroot.cxx
Rucio/Chaining/: rdataframe_example.py  tchain_example.py  uproot_example.py
SIDIS/: README.md
SimulationProduction/: check_campaign.py  check_storage.py
TestBeamsAndSetups/beam_evenlope/: README.md  envelope.py  (+1 more)
Tracking/: README.md  check_dd4hep_geo.ipynb  particle_track_parameters.C
Tree_Pruning/: README.md  TreePrune.C
(+134 files in other folders)
